# solid-fun-w-gtest

./: CMakeLists.txt  LICENSE  README.md
mocks/: iAPIMock.hpp
mocks/solidfun/: iAPIMock.hpp
src/: APIImpl.cpp  APIImpl.hpp  Error.hpp  Loggable.hpp  OK.hpp  Status.hpp  Warn.hpp  iAPI.hpp  main.cpp
src/solidfun/: APIImpl.cpp  APIImpl.hpp  Error.hpp  Loggable.hpp  OK.hpp  Status.hpp  Warn.hpp  iAPI.hpp  main.cpp
test/: iAPITest.cpp
test/solidfun/: StatusTest.cc  iAPITest.cc
